--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,15 +6,6 @@ on:
   pull_request:
     branches: [main]
   workflow_dispatch:
-    inputs:
-      build_type:
-        description: 'Build type'
-        required: true
-        default: 'debug'
-        type: choice
-        options:
-          - debug
-          - release
 
 env:
   XCODE_VERSION: '15.2'
@@ -49,68 +40,26 @@ jobs:
             .github/scripts/build-whisper.sh
           fi
       
-      - name: Copy whisper assets
-        run: |
-          mkdir -p SalesCoach/Resources
-          cp whisper.cpp/main SalesCoach/Resources/whisper-cli
-          cp whisper.cpp/models/ggml-base.en.bin SalesCoach/Resources/
-      
       - name: Install Ruby dependencies
         run: |
           gem install bundler
           bundle install
       
-      - name: Build App (Debug)
-        if: github.event.inputs.build_type != 'release'
-        run: |
-          xcodebuild build \
-            -project ${{ env.PROJECT }} \
-            -scheme ${{ env.SCHEME }} \
-            -configuration Debug \
-            -destination 'platform=macOS' \
-            -derivedDataPath build/DerivedData \
-            CODE_SIGN_IDENTITY="" \
-            CODE_SIGNING_REQUIRED=NO
-      
-      - name: Build App (Release)
-        if: github.event.inputs.build_type == 'release'
-        run: |
-          xcodebuild build \
-            -project ${{ env.PROJECT }} \
-            -scheme ${{ env.SCHEME }} \
-            -configuration Release \
-            -destination 'platform=macOS' \
-            -derivedDataPath build/DerivedData \
-            CODE_SIGN_IDENTITY="" \
-            CODE_SIGNING_REQUIRED=NO
-      
-      - name: Package App
-        run: |
-          mkdir -p build/Output
-          cp -R "build/DerivedData/Build/Products/Debug/SalesCoach.app" build/Output/ 2>/dev/null || \
-          cp -R "build/DerivedData/Build/Products/Release/SalesCoach.app" build/Output/
+      - name: Build App with Fastlane
+        run: bundle exec fastlane build_release
       
       - name: Upload App Artifact
         uses: actions/upload-artifact@v4
         with:
           name: SalesCoach-${{ github.sha }}
-          path: build/Output/SalesCoach.app
+          path: build/SalesCoach.app
           retention-days: 14
       
-      - name: Create DMG (Release only)
-        if: github.event.inputs.build_type == 'release'
-        run: |
-          hdiutil create -volname SalesCoach \
-            -srcfolder build/Output/SalesCoach.app \
-            -ov -format UDZO \
-            build/Output/SalesCoach.dmg
-      
-      - name: Upload DMG (Release only)
-        if: github.event.inputs.build_type == 'release'
+      - name: Upload DMG
         uses: actions/upload-artifact@v4
         with:
           name: SalesCoach-${{ github.sha }}.dmg
-          path: build/Output/SalesCoach.dmg
+          path: build/SalesCoach.dmg
           retention-days: 30
 
   test:
@@ -124,20 +73,18 @@ jobs:
       - name: Select Xcode
         run: sudo xcode-select -s /Applications/Xcode_${{ env.XCODE_VERSION }}.app
       
-      - name: Run Unit Tests
+      - name: Install Ruby dependencies
         run: |
-          xcodebuild test \
-            -project ${{ env.PROJECT }} \
-            -scheme ${{ env.SCHEME }} \
-            -destination 'platform=macOS' \
-            -resultBundlePath TestResults.xcresult \
-            CODE_SIGN_IDENTITY="" \
-            CODE_SIGNING_REQUIRED=NO || true
+          gem install bundler
+          bundle install
+      
+      - name: Run Unit Tests
+        run: bundle exec fastlane test || true
       
       - name: Upload Test Results
         uses: actions/upload-artifact@v4
         if: always()
         with:
           name: test-results
-          path: TestResults.xcresult
+          path: fastlane/test_output
 
