--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,7 @@ env:
 jobs:
   build:
     runs-on: macos-14  # M1 runner (Apple Silicon)
+    if: github.event_name != 'push' || !startsWith(github.event.head_commit.message, '[skip ci]')
     
     steps:
       - name: Checkout
@@ -65,6 +66,7 @@ jobs:
   test:
     runs-on: macos-14
     needs: build
+    if: github.event_name != 'push' || !startsWith(github.event.head_commit.message, '[skip ci]')
     
     steps:
       - name: Checkout
